Реализованы ручки /cards, добавлена документация Swagger, добавлен RoleMapper
